[gd_scene load_steps=3 format=3 uid="uid://b67yjfr1mmxx6"]

[ext_resource type="Script" path="res://engine/TestUDPClient.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://1ggxtsr4hbwc" path="res://engine/UDPClient.tscn" id="2"]

[node name="TestUDPClient" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
server_exe = "C:\\Users\\fensm\\gitrepo\\godot\\godot-chess\\bin\\iopiper.exe"
engine = "C:\\Users\\fensm\\gitrepo\\godot\\godot-chess\\engine\\stockfish-windows-x86-64-modern.exe"

[node name="UDPClient" parent="." instance=ExtResource("2")]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="tree_exited" from="." to="." method="_on_TestUDPClient_tree_exited"]
[connection signal="got_packet" from="UDPClient" to="." method="_on_UDPClient_got_packet"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
